--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "moduleResolution": "node",
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
   },
   "include": [
     "src"
